# AIHPC-Larning

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
aihpc/: CMakeLists.txt  __init__.py
aihpc/_C/: __init__.pyi  core.pyi
aihpc/_C/core/: __init__.pyi  spdlog.pyi
aihpc/_C/kernel/: __init__.pyi  cuda.pyi  openmp.pyi
aihpc/cc/: aihpc_py_module.cpp  aihpc_py_module.h
aihpc/core/: CMakeLists.txt  __init__.py  api.py  dispatcher.py
aihpc/core/benchmark/: __init__.py  base_benchmark.py  op_kernel_benchmark.py
aihpc/core/cc/: core.h  core_py_module.cpp  core_py_module.h
aihpc/core/cc/cc_logger/: cc_logger.cpp  cc_logger.h
aihpc/core/data_provider/: __init__.py  args_data_provider.py  base_data_provider.py  tensor_generator.py
aihpc/core/processor/: __init__.py  base_processor.py  processor_group.py  single_processor.py
aihpc/core/reporter/: __init__.py  base_reporter.py  fig_reporter.py  html_reporter.py
aihpc/core/utils/: __init__.py  config.py  registry_build.py
aihpc/core/utils/logger/: __init__.py  base_logger.py  cc_logger_warpper.py  py_logger.py
aihpc/include/: aihpc.h
aihpc/kernel/: CMakeLists.txt  __init__.py
aihpc/kernel/cuda/: CMakeLists.txt  __init__.py
aihpc/kernel/cuda/add/: CMakeLists.txt  vector_add.cpp  vector_add.h  vector_add_cuda.cu  vector_add_cuda.cuh
aihpc/kernel/cuda/include/: cuda_kernel.h  cuda_kernel_py_module.cpp  cuda_kernel_py_module.h
aihpc/kernel/cuda/vector_add/: __init__.py  vector_add.cpp  vector_add.h  vector_add.py  vector_add_cuda.cu  vector_add_cuda.cuh
aihpc/kernel/include/: kernel.h  kernel_py_module.cpp  kernel_py_module.h
aihpc/kernel/openmp/: CMakeLists.txt
aihpc/kernel/openmp/add/: CMakeLists.txt  vector_add.cpp  vector_add.h  vector_add_openmp.cpp  vector_add_openmp.h
aihpc/kernel/openmp/include/: openmp_kernel.h  openmp_kernel_py_module.cpp  openmp_kernel_py_module.h
aihpc/kernel/openmp/vector_add/: vector_add.cpp  vector_add.h  vector_add_openmp.cpp
aihpc/kernel/py_api/: __init__.py  add.py  cuda.py  openmp.py  torch.py  triton.py  vector_add.py
aihpc/kernel/torch/: __init__.py  vector_add.py
aihpc/kernel/triton/: __init__.py  vector_add.py
configs/: launch_kernel.py  launch_kernel.yaml
docs/: OpDispatchMechanism.md
script/: generate_aihpc_C_pyi.sh  run.sh  run_test.sh
tests/: CMakeLists.txt  __init__.py
tests/common/: CMakeLists.txt  __init__.py  check.py
tests/conf/: __init__.py  logger_setting.py
tests/test_cases/: CMakeLists.txt  __init__.py  test_tritron.py
tests/test_cases/core/: CMakeLists.txt  test_cc_logger.cpp
tests/test_cases/kernel/: CMakeLists.txt  __init__.py
tests/test_cases/kernel/cuda/: CMakeLists.txt  __init__.py  test_add.cpp  test_cuda.cpp  test_cuda.py
tests/test_cases/kernel/openmp/: CMakeLists.txt  __init__.py  test_openmp.cpp
tests/test_cases/kernel/triton/: __init__.py  test_triton.py
tests/utils/: logger_setting.py
tools/: generate_version.py  launch.py  launch_unittest.py
triton_tutorials/triton_python/: 01-vector-add.py
tritron_tutorials/: README.md
