[build-system]
requires = [ "setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aihpc"
version = "0.0.1"
keywords = [ "HPC" ]
authors = [
    { name = "ThyssenWen", email = "Thinksky5124@outlook.com" }
]
description = "High performance computing knowledge learning warehouse in artificial intelligence"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "triton",
    "numpy",
    "pandas",
    "torch",
    "pybind11-stubgen"
]

[project.optional-dependencies]
test = [
    "pytest >= 7.4"
]

[tool.setuptools.packages.find]
# All the following settings are optional:
include = ["aihpc*"]  # ["*"] by default
exclude = ["triton_tutorials*"]  # empty by default